fix compilation errors after cherry-pick